dada_tests/parser/float_no_space/compiler-output.ref
Error: whitespace is not allowed in float literals
   ╭─[dada_tests/parser/float_no_space.dada:2:13]
   │
 2 │     let a = 1 .1
   ·             ──┬─  
   ·               ╰─── here
───╯
Error: whitespace is not allowed in float literals
   ╭─[dada_tests/parser/float_no_space.dada:4:13]
   │
 4 │     let b = 1. 1
   ·             ──┬─  
   ·               ╰─── here
───╯
Error: whitespace is not allowed in float literals
   ╭─[dada_tests/parser/float_no_space.dada:6:13]
   │
 6 │     let c = 1 . 1
   ·             ──┬──  
   ·               ╰──── here
───╯
